change portfolio items + fix navbar buttons bug on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+:root {
+    --opaqueBlack: rgba(54, 54, 54, 0.4)
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -8,10 +12,10 @@ html, body {
 body {
     background: linear-gradient(-50deg, rgb(181, 206, 214), rgb(205, 235, 205), #FFEF78, #98DDCA, #D5ECC2, #FFD3B4, #FFAAA7, #c69bdd, rgb(24, 24, 24));
     background-size: 480% 480%;
-    animation: moving 16s ease-in-out infinite;
+    animation: moving 15s ease-in-out infinite;
 }
 
-/*bakground gradient animation - moves 450%x450% background around 100%x100% space*/
+/*bakground gradient animation - moves 480%x480% background around 100%x100% space*/
 @keyframes moving {
     0% {background-position: 0% 50%;}
     50% {background-position: 100% 50%;}
@@ -24,6 +28,7 @@ header {
     position: fixed;
     display: flex;
     align-items: center;
+    transition: all 0.2s ease-in-out;
 }
 
 #nameBox {
@@ -76,7 +81,7 @@ button{
     flex: 0 1 20%;
     height: 35px;
     width: 20%;
-    font-size: 20px;
+    font-size: 23px;
     text-align: center;
     border: none;
     border-radius: 4px;
@@ -147,6 +152,8 @@ h3 {
 
 #aboutMeImage p {
     font-size: 25px;
+    margin-top: 10px;
+    cursor: default;
 }
 
 /*Portfolio section*/
@@ -287,11 +294,13 @@ li:active {
     margin-right: 25px;
     max-width: 20vw;
     transition: all 0.2s linear;
+    cursor: crosshair;
 }
 
 #langImgContainer img:hover {
     transform: scale(1.15);
 }
+
 
 #langImgContainer img:active {
     transform: scale(0.85);
@@ -315,6 +324,14 @@ li:active {
     align-items: center;
 }
 
+/*flex container for imgs*/
+#imagesContainer {
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50vw;
+}
+
 #contactImages img {
     width: 10vw;
     border-radius: 25px;
@@ -331,14 +348,7 @@ li:active {
     transform: scale(0.95) rotate(0deg);
 }
 
-/*flex container for imgs*/
-#imagesContainer {
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 50vw;
-}
-
+/*made with love + copyright*/
 footer {
     width: 100vw;
     height: 50px;
@@ -349,6 +359,7 @@ footer {
     background-color: #98DDCA;
     box-shadow: 0px -15px 40px rgba(54, 54, 54, 0.4);
     text-shadow: -1px 1px 3px rgba(54, 54, 54, 0.4);
+    cursor: default;
 }
 
 /*mobile overrides*/
@@ -356,11 +367,12 @@ footer {
         /*header + navbar*/
         button{
             flex: 1 1 20%;
-            margin-left: 5px;
-            margin-right: 5px;
-            font-size: 18px;
+            margin-left: 3px;
+            margin-right: 3px;
+            font-size: 20px;
             text-align: center;
         }
+        /*
         button:hover {
             border: none;
             box-shadow: none;
@@ -368,6 +380,7 @@ footer {
             text-shadow: -1px 1px 3px rgba(54, 54, 54, 0.4);
             font-weight: 500;
         }
+        */
         button:active {
             box-shadow: 0 0 10px rgb(24, 24, 24);
             border: 1px solid #FFAAA7;
@@ -434,9 +447,9 @@ footer {
     }
     button {
         flex: 1 1 20%;
-        margin-left: 5px;
-        margin-right: 5px;
-        font-size: 18px;
+        margin-left: 3px;
+        margin-right: 3px;
+        font-size: 16px;
         text-align: center;
     }
     button:hover {
